mongooseim/mongoose-svc-bosh.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoose-bosh
  labels:
    app: mongoose
spec:
  ports:
  - name: bosh
    port: 5280
    targetPort: 5280
  selector:
    app: mongoose
  type: ClusterIP
