mongooseim/mongoose-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoose-cluster-ip
  namespace:
  labels:
spec:
  ports:
  - protocol: TCP
    port: 5222
    targetPort: 5222
  selector:
    app: mongoose
  type: ClusterIP
