mongooseim/mongoose-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoose-lb
  namespace:
  labels:
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5222
  selector:
    app: mongoose
  type: LoadBalancer
