mongooseim/mongoose-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mongoose
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: user00.kube.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mongoose-bosh
          servicePort: 5280
